# strix

./: CONTRIBUTING.md  Makefile  pyproject.toml
src/strix/: __init__.py  core.py  hooks.py  middleware.py  plugins.py
