[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strix"
version = "0.1.0"
description = "A lightweight task scheduling and automation framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "strix contributors" },
]
keywords = ["automation", "scheduling", "tasks", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
strix = "strix.cli:main"

[project.urls]
Homepage = "https://github.com/usestrix/strix"
Repository = "https://github.com/usestrix/strix"
Issues = "https://github.com/usestrix/strix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/strix"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
# relaxed strict mode for personal learning — re-enable gradually
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# TODO: enable these as I get more comfortable with the codebase
# disallow_any_generics = true
# disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# removed --cov-report=term-missing to reduce noise during quick test runs
# added -v for more readable output when running tests locally
# added --tb=short so tracebacks are easier to scan without being overwhelming
# removed -x so all tests run even on failure — easier to see the full picture
# using -x here so I stop at first failure — helps me focus while learning the codebase
addopts = "--cov=src/strix --cov-report=term-missing -v --tb=short -x"

[tool.coverage.run]
source = ["src/strix"]
omit = ["tests/*"]
